--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
+@keyframes fade_out {
+    0% {opacity: 1;}
+    100% {opacity: 0;}
+}
+@keyframes fade_in {
+    0% {transform: translateX(-40rem);}
+    100%{transform: translateX(0);}
+    
+}
 body {
     font-family:'Roboto', sans-serif;
     display: flex;
@@ -7,36 +16,50 @@ body {
 nav{
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
     justify-content: center; 
     min-height: 100%;
     background-color: #E8E8E8;
-    width: 4rem;
-    position: fixed;
-    top: 4rem;
-    left: 0px;
+    width: 18rem;
+    position:fixed;
+    left: -14rem;
+    transition: 0.7s;
+    z-index: 9;
 }
 .ham-menu{
     background-color: #51BB84;
+    height: 4rem;
+    display: flex;
+    justify-content: right;
+    width: 18rem;
+    position:fixed;
+    left: -14rem;
+    top: 0;
+    transition: 0.7s;
+    z-index: 99;
+}
+.ham-butt{
     width: 4rem;
     height: 4rem;
-    position: fixed;
-    top: 0px;
-    left: 0px;
+    cursor: pointer;
     display: flex;
-    align-items: center;
+    align-items:flex-end;
     justify-content: center;
+    flex-direction: column;
 }
 .img{
     background-image: url(./IMG_20220424_124223_95333.jpg);
     max-width: 550px;
     min-height: 100vh;
-    margin-left: 4rem;
     display: flex;
     align-items: center;
     flex-direction: column-reverse;
     color: #51BB84;
     background-repeat: no-repeat;
     background-position-x: center;
+    margin-left: 4rem;
+    transition: 0.7s;
+    animation: fade_in 1s;
 }
 .container{
     padding: 3rem;
@@ -44,9 +67,9 @@ nav{
 }
 .container-catg{
     display: grid;
-    grid-template-rows: 200px 200px;
-    grid-template-columns: 200px 200px;
-    grid-gap: 1rem;
+    grid-template-rows: 10rem 10rem;
+    grid-template-columns: 10rem 10rem;
+    grid-gap: 3rem;
 
 }
 .itemes{
@@ -59,4 +82,30 @@ nav{
     height: 1.5px;
     border:none;
     background-color: grey;
+}
+.top-bar{
+    width: 2rem;
+    height: 3px;
+    background-color: white;
+    margin-right: 1rem;
+    margin-bottom: 0.5rem;
+}
+.bottom-bar{
+    width: 2rem;
+    height: 3px;
+    background-color: white;
+    margin-right: 1rem;
+    transition: 0.7s;
+}
+.middle-bar{
+    width: 2rem;
+    height: 3px;
+    background-color: white;
+    margin-right: 1rem;
+    margin-bottom: 0.5rem;
+    transition: 0.6s; 
+    opacity: 1; 
+}
+.hide{
+    display: none;
 }
