--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,15 @@ body {
     overflow: hidden;
     width: 100vw;
 }
+.theme_toggle{
+    width: 3rem;
+    height: 3rem;
+    background-color: grey;
+    position: absolute;
+    right: 0;
+    top: 0;
+    cursor: pointer;
+}
 nav{
     display: flex;
     flex-direction: column;
@@ -37,7 +46,7 @@ nav{
     width: 18rem;
     position:fixed;
     left: -14rem;
-    transition: 1s;
+    transition: 0.6s;
     z-index: 9;
     -webkit-box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.6); 
     box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.6);
@@ -51,7 +60,7 @@ nav{
     position:fixed;
     left: -14rem;
     top: 0;
-    transition: 1s;
+    transition: 0.6s;
     z-index: 99;
 }
 .ham-butt{
@@ -87,15 +96,15 @@ nav{
     background-repeat: no-repeat;
     background-position-x: center;
     margin-left: 4rem;
-    transition: 1s;
-    animation: fade_in 1s;
+    transition: 0.6s;
+    animation: fade_in 0.6s;
     -webkit-box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.6); 
     box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.6);
 }
 .container{
     padding: 3rem;
     max-width: 50vw;
-    animation:roll_in 1s;
+    animation:roll_in 0.6s;
 }
 .container-catg{
     display: grid;
@@ -195,7 +204,7 @@ nav{
     transform: scale(0.98);
     color: grey;
 }
-@media screen and (max-width:920px) {
+@media screen and (max-width:550px) {
     
     body {
         font-family:'Roboto', sans-serif;
@@ -209,20 +218,23 @@ nav{
     }
     nav{
         width: 100vw;
-        min-height: 100vh;
+        height: 30vh;
         justify-content:flex-start; 
         background-color: #E8E8E8;
-        position:sticky;
-        top: -95%;
-        transition: 1s;
+        position:fixed;
+        top: -100vh;
+        left: 0;
+        transition: 0.6s;
         z-index: 9;
         box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.6);
-        background-color: red;
     }
     .main_container{
         display: flex;
         flex-direction: column;
         width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .img{
         background-image: url(../src/22222.jpg);
@@ -235,36 +247,80 @@ nav{
         color: #51BB84;
         background-repeat: no-repeat;
         margin:0 ;
-        transition: 1s;
+        transition:fade_in 1s;
         animation: fade_in 1s;
     }
-    .ham-menu{
-        height: 4rem;
+    .container-catg{
         display: flex;
-        justify-content: right;
-        width: 18rem;
+        flex-direction: column;
+        align-items: center;
+    }
+    .container{
+        padding: 0;
+        width: 100vw;
+        animation:roll_in 1s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .category{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .itemes{
+        width: 23rem;
+        height: 150px;
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .ham-menu{
+        background-color: #51BB84;
+        height: 3rem;
+        display: flex;
+        justify-content: center;
+        width: 3rem;
         position:fixed;
-        left: -18rem;
+        left: 0;
         top: 0;
         transition: 1s;
         z-index: 99;
     }
     .ham-butt{
-        width: 4rem;
-        height: 4rem;
+        width: 3rem;
+        height: 3rem;
         cursor: pointer;
         display: flex;
-        align-items:flex-end;
+        align-items:center;
         justify-content: center;
         flex-direction: column;
         transition: 0.5s;
-        position: sticky;
     }
-    .container-catg{
-        display: flex;
-        flex-direction: column;
-    
+    .top-bar{
+        width: 1.5rem;
+        height: 3px;
+        background-color: white;
+        margin-right: 0rem;
+        margin-top: 0.2rem;
+        margin-bottom: 0.3rem;
     }
-    
-
+    .bottom-bar{
+        width: 1.5rem;
+        height: 3px;
+        background-color: white;
+        margin-right: 0rem;
+        transition: 0.7s;
+    }
+    .middle-bar{
+        width: 1.5rem;
+        height: 3px;
+        background-color: white;
+        margin-right: 0rem;
+        margin-bottom: 0.3rem;
+        transition: 0.6s; 
+        opacity: 1; 
+    }
 }
