--- a/src/style.css
+++ b/src/style.css
@@ -88,7 +88,8 @@ nav{
 .img{
     background-image: url(../src/desktop_bg.jpg);
     max-width: 550px;
-    min-height: 100vh;
+    min-height: 50vh;
+    background-position-y: center;
     display: flex;
     align-items: center;
     flex-direction: column-reverse;
@@ -240,7 +241,7 @@ nav{
         background-image: url(../src/22222.jpg);
         width: 100vw;
         height: auto;
-        background-size: cover;
+        background-size:auto;
         display: flex;
         align-items: center;
         flex-direction: column-reverse;
@@ -262,6 +263,11 @@ nav{
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    .text{
+        width: 80vw;
+        text-align: justify;
+        padding-top: 2rem;
     }
     .category{
         display: flex;
