--- a/src/style.css
+++ b/src/style.css
@@ -108,6 +108,15 @@ nav{
     max-width: 50vw;
     animation:roll_in 0.6s;
 }
+.title_1{
+    font-weight: bold;
+    font-size: 3rem;
+}
+.subtitle_1{
+    color:#51BB84;
+    font-weight: bold;
+    padding: 0.5rem 0;
+}
 .container-catg{
     display: grid;
     grid-template-rows: 10rem 10rem;
@@ -195,10 +204,17 @@ nav{
     height: fit-content;
     margin: 2rem 0;
     padding-right: 0.5rem;
+    
+}
+.cat_icon{
+    color: black;
+}
+.active{
+    color: #51BB84;
 }
 .cat:hover{
     text-decoration: dotted black;
-    transform: translatey(-0.7rem);
+    transform: translatey(-0.4rem);
     transition: 0.5s;
     cursor: pointer;
 }
@@ -214,6 +230,12 @@ nav{
 }
 .card_description{
     line-height: normal; color:darkslategray;
+}
+.title_2{
+    font-size:2rem;
+    font-weight: bold;
+    padding:1rem 0 1rem 2rem;
+     width: 70%; 
 }
 
 @media screen and (max-width:550px) {
@@ -267,6 +289,7 @@ nav{
         transition:fade_in 1s;
         animation: fade_in 1s;
     }
+    
     .container-catg{
         display: flex;
         flex-direction: column;
@@ -280,10 +303,37 @@ nav{
         flex-direction: column;
         align-items: center;
     }
+    .second_container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .projects{
+        width: 70vw;
+        height: auto;
+        background-color:#51BB84;
+        margin: 1rem;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        border-radius: 0.5rem;
+        transition: 0.2s; 
+    }
+    .title_2{
+        text-align: center;
+        padding:0;
+        margin-top: 4rem;
+    }
     .text{
         width: 80vw;
         text-align: justify;
         padding-top: 2rem;
+    }
+    .title_1{
+        text-align: center;    
+    }
+    .subtitle_1{
+        text-align: center;  
     }
     .category{
         display: flex;
