--- a/src/style.css
+++ b/src/style.css
@@ -162,6 +162,7 @@ nav{
     flex-wrap: wrap;
     align-content: center;
     animation:roll_in 1s;
+    width: 100%;
 
 }
 .projects{
@@ -230,8 +231,32 @@ nav{
      width: 70%; 
 }
 .third_container{
+    width: 60%;
+    animation:roll_in 1s;
+}
+.page_3{
+    display: flex;
+}
+.social_container{
+    display: flex;
     flex-direction: row;
 
+}
+.social{
+    margin-left: 3rem;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 10rem;
+    border: solid 3px black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.social:hover{
+    color: #318b5c;
+    border: solid #318b5c;
+    
 }
 
 
@@ -425,6 +450,11 @@ nav{
     .active{
         color: #51BB84;
     }
+    .social{
+        border: solid 3px white;
+        color: white;
+    }
+
     
 }
 
