--- a/src/style.css
+++ b/src/style.css
@@ -33,9 +33,9 @@ nav{
     flex-direction: column;
     align-items: flex-end;
     justify-content: center; 
-    min-height: 100%;
     background-color: #E8E8E8;
     width: 18rem;
+    min-height: 100vh;
     position:fixed;
     left: -14rem;
     transition: 0.6s;
@@ -244,8 +244,8 @@ nav{
 }
 .social{
     margin-left: 3rem;
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
     border-radius: 10rem;
     border: solid 3px black;
     display: flex;
@@ -257,6 +257,16 @@ nav{
     color: #318b5c;
     border: solid #318b5c;
     
+}
+#map{
+    width: 450px; 
+    height: 300px; 
+    background: #eee; 
+    border: 2px solid #aaa; 
+    margin: 3rem;
+}
+.footer{
+    display: none;
 }
 
 
@@ -274,16 +284,18 @@ nav{
     }
     nav{
         width: 100vw;
-        height: 30vh;
+        height: 40vh;
+        min-height:unset;
         justify-content:flex-start; 
         background-color: #E8E8E8;
         position:fixed;
-        top: -100vh;
+        top: -40vh;
         left: 0;
         transition: 0.6s;
         z-index: 9;
         box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.6);
         margin-right: 5rem;
+        align-items: center;
     }
     .nav_ul{
         margin-right: 3rem;
@@ -416,6 +428,25 @@ nav{
         margin-bottom: 0.3rem;
         transition: 0.6s; 
         opacity: 1; 
+    }
+    .third_container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+    #map{
+        width: 90vw;
+        height: 50vh;
+    }
+    .social{
+        margin: 0 1.5rem;
+        
+    }
+    .footer{
+        text-align: center; 
+        padding-bottom: 20px;
+        display: block;
     }
 }
 @media (prefers-color-scheme: dark) {
