--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,8 @@
     0% {transform: translatey(2rem);opacity: 0;}
     100%{transform: translatey(0rem);opacity: 1;}
 }
+html{
+scroll-behavior: smooth;}
 body {
     font-family:'Roboto', sans-serif;
     display: flex;
